--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 2024-08-25
+  Bugfixes:
+    - Structural fix for crash on GPS tag added
+---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2024-08-25
+  Bugfixes:
+    - Fixed crash on GPS tag added
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2024-08-19
   Features:
