--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,16 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.4
+Date: 2024-09-26
+  Bugfixes:
+    - Prevent crash when only Map tag GPS or Map tag teleport is installed
+---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 2024-08-30
+  Features:
+    - Added bookmark functionality
+  Bugfixes:
+    - Fixed compatibility between Map tag GPS and Map tag teleport
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2024-08-25
   Bugfixes:
