initial changes to get map-tag-gps working on 2.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.5
+Date: 2024-09-28
+  Bugfixes:
+    - Prevent crash when trying to acces Map tag teleport setting
+---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 2024-09-26
   Bugfixes:
